fix legend color

--- a/map.html
+++ b/map.html
@@ -80,7 +80,7 @@
     map.on('load', function() {
         console.log('map load event occured...');
         var layers = ['0-0.1 Least Stressed', '0.1-0.2', '0.2-0.3', '0.3-0.4', '0.4-0.5', '> 0.5 Most Stressed'];
-        var colors = ['#fleef6', '#d4b9da', '#c994c7', '#df65b0', '#dd1c77', '#980043'];
+        var colors = ['#f1eef6', '#d4b9da', '#c994c7', '#df65b0', '#dd1c77', '#980043'];
 
         for (var i = 0; i < layers.length; i++) {
             var layer = layers[i];
