example code for adding popups

--- a/map.html
+++ b/map.html
@@ -98,6 +98,25 @@
         }
     });
 
+    // Use the following code block to add popups to point layer to displa
+    map.on('click', function (e) {
+        var features = map.queryRenderedFeatures(e.point, {
+            layers: ['fishsitesiwi'] // replace this with the name of the layer
+        });
+
+        if (!features.length) {
+            return;
+        }
+
+        var feature = features[0];
+
+        var popup = new mapboxgl.Popup({ offset: [0, -15] })
+            .setLngLat(feature.geometry.coordinates)
+            .setHTML('<h3>' + feature.properties.name + '</h3><p>' + feature.properties.iwi.toLocaleString() + '</p>')
+            .setLngLat(feature.geometry.coordinates)
+            .addTo(map);
+    });
+
 
 
 
