add border to legend symbol

--- a/map.html
+++ b/map.html
@@ -47,6 +47,7 @@
         .legend-key {
             display: inline-block;
             border-radius: 100%;
+            border: 1px solid black;
             width: 10px;
             height: 10px;
             margin-right: 5px;
