--- a/map.html
+++ b/map.html
@@ -36,7 +36,7 @@
         }
 
         #legend {
-            padding: 10px;
+            padding: 0 10px;
             box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
             line-height: 18px;
             height: 200px;
