remove uneeded script

--- a/map.html
+++ b/map.html
@@ -4,10 +4,10 @@
     <meta charset='utf-8' />
     <title>Wild Brook Trout Streams</title> <!--Change this!! -->
     <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
-    <script
+    <!-- <script
             src="https://code.jquery.com/jquery-3.4.1.min.js"
             integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-            crossorigin="anonymous"></script>
+            crossorigin="anonymous"></script> -->
     <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.49.0/mapbox-gl.js'></script>
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.49.0/mapbox-gl.css' rel='stylesheet' />
     <style>
