update map and site symbols

--- a/index.html
+++ b/index.html
@@ -144,15 +144,15 @@
         <a href='mapfull.html' class="linkbox">Full-screen version of all Wild Brook Trout Sites in Connecticut</a>
 
 
-        <h1>Wild Brook Trout Streams of Connecticut - DRAFT</h1>
+        <h1>Wild Brook Trout Streams of Connecticut</h1>
         <h2>Developed By Mary Becker @ UKY New Maps Plus</h2>
         <div class="row">
             <div class="first-column">
                 <p>
-                    <i>Salvelinus fontinalis</i> (eastern wild brook trout) are one of very few native cold water fish species in the
+                    <i>Salvelinus fontinalis</i> (eastern wild brook trout) is one of very few native cold water fish species in the
                     State of Connecticut (CT) (Beauchene et al. 2014).  Cold water fish populations are under great threat in
                     the CT due to stream flow and temperature modification caused by land use, fragmented populations from dams and
-                    culverts, climate change and introduction of exotic species.  Since 1989, wild brook trout have been observed in
+                    culverts, climate change and introduction of exotic species.  Wild brook trout have been observed in
                     drainage basins that include 3,238 stream miles (approximate 1/4 of all CT stream miles). Approximately 1/3 of that habitat
                     (1,036 stream miles) is stressed due to human alterations.
                 </p>
@@ -170,10 +170,14 @@
                     to support and maintain the full range of ecological processes and function essential to sustainability.
                     Flotemersch et al. (2016) proposed and Thornbrugh et al. (2018). mapped an IWI for the U.S. based on six ecological
                     processes and functions:  hydrologic regulation, regulation of water chemistry, sediment regulation, hydrologic connectivity,
-                    temperature regulation, and habitat provision.  A Connecticut specific IWI was developed for this project using data
-                    compiled to developed the recently adopted Connecticut Stream flow Regulations.  The index is a collective measure of the
+                    temperature regulation, and habitat provision.  A similar Connecticut specific IWI was developed as part of the
+                    recently adopted Connecticut Stream flow Regulations.  The index is a collective measure of the
                     degree to which human-related alterations have affected these ecological processes and functions.
-                    The index ranges from 0 to 1 where 0 is a an unaltered site and 1 is a highly stressed site.
+                    The index ranges from 0 to 1 where 0 is a an unaltered site and 1 is a highly stressed site.  The map above displays wild brook
+                    trout habitat as the watershed upstream of high densities of wild brook trout popultations.  High density wild brook trout
+                    populations are defined as sites where observed samples contained greater than 73 wild brook trout per hectare.  Samples were
+                    collected by the CT DEEP Monitoring and Assessment Program and Inland Fisheries Program from 1989 - 2017.  Site with higher
+                    levels of stress should be prioritize for restoration, while sites with low levels of stress should be prioritized for protection.
                 </p>
 
                 <h3>Tools used in this project</h3>
@@ -198,7 +202,7 @@
             <div class="column">
                 <img class="max-image-width" src="graphics/brooktrout.jpg"
                     title="Brook Trout" border = "5">
-                <div class="linkbox">Wild Brook Trout.  CT DEEP Photo Credit.</div>
+
                 <img class="max-image-width" src="graphics/drystream.JPG"
                      title="Dry Stream">
                 <div class="linkbox">Dry Stream.  CT DEEP Photo Credit.</div>
@@ -221,10 +225,6 @@
         <p>Flotemersch, J. E., Leibowitz, S. G., Hill, R. A., Stoddard, J. L., Thoms, M. C., and Tharme, R. E. (2016)
             A Watershed Integrity Definition and Assessment Approach to Support Strategic Management of Watersheds.
             River Res. Applic., 32: 1654– 1671. doi: 10.1002/rra.2978.<p>
-
-        <p>PBES (2019) Global assessment report on biodiversity and ecosystem services of the Intergovernmental Science-
-            Policy Platform on Biodiversity and Ecosystem Services. E. S. Brondizio, J. Settele, S. Díaz, and H. T. Ngo (editors).<p>
-        IPBES Secretariat, Bonn, Germany.
 
         <p>Darren J. Thornbrugh, Scott G. Leibowitz, Ryan A. Hill, Marc H. Weber, Zachary C. Johnson, Anthony R. Olsen,
             Joseph E. Flotemersch, John L. Stoddard, David V. Peck (2018) Mapping watershed integrity for the conterminous
