--- a/map.html
+++ b/map.html
@@ -39,7 +39,7 @@
             padding: 0 10px;
             box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
             line-height: 18px;
-            height: 200px;
+            height: 225px;
             margin-bottom: 40px;
             width: 200px;
         }
@@ -52,12 +52,18 @@
             height: 10px;
             margin-right: 5px;
         }
+
+        .legend-site {
+          margin: 0px 0 10px 0;
+          display:inline-block;
+          font-style: bold;
+        }
     </style>
 </head>
 <body>
 
 <div id='map'></div>
-<div class='map-overlay' id='legend'><h3>Indicator of Watershed Integrity</h3></div>
+<div class='map-overlay' id='legend'> <div class="legend-site"><img src="graphics/aquarium-15.svg"> Sample Site <h4>Index of Watershed Integrity</h4></div></div>
 
 <script>
     // Change this to your Token ----------------------
@@ -99,10 +105,10 @@
         }
     });
 
-    // Use the following code block to add popups to point layer to displa
+    // Use the following code block to add popups to point layer to display
     map.on('click', function (e) {
         var features = map.queryRenderedFeatures(e.point, {
-            layers: ['fishsitesiwi'] // replace this with the name of the layer
+            layers: ['fishsitesiwi-7n8tja'] // replace this with the name of the layer
         });
 
         if (!features.length) {
@@ -113,7 +119,7 @@
 
         var popup = new mapboxgl.Popup({ offset: [0, -15] })
             .setLngLat(feature.geometry.coordinates)
-            .setHTML('<h3>' + feature.properties.name + '</h3><p>' + feature.properties.iwi.toLocaleString() + '</p>')
+            .setHTML('<h3>' + feature.properties.name + '</h3><p>' + 'IWI: '+ feature.properties.iwi.toLocaleString() + '</p>')
             .setLngLat(feature.geometry.coordinates)
             .addTo(map);
     });
