update readme and site text

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                     <i>Salvelinus fontinalis</i> (eastern wild brook trout) is one of very few native cold water fish species in the
                     State of Connecticut (CT) (Beauchene et al. 2014).  Cold water fish populations are under great threat in
                     the CT due to stream flow and temperature modification caused by land use, fragmented populations from dams and
-                    culverts, climate change and introduction of exotic species.  Wild brook trout have been observed in
+                    culverts, climate change and introduction of exotic species(Eastern Brook Trout Venture, 2019).  Wild brook trout have been observed in
                     drainage basins that include 3,238 stream miles (approximate 1/4 of all CT stream miles). Approximately 1/3 of that habitat
                     (1,036 stream miles) is stressed due to human alterations.
                 </p>
