update map meta and text

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                 <p>
                     Chidsey Brook is an example of a stressed site.  It has been frequently observed dry during summer months
                     due to over-pumping of public water supply wells near the streams.  Stressed streams like Chidsey need immediate
-                    management to restore and protect native Connecticut species like the Wild Brook Trout.
+                    management to restore and protect native Connecticut species like Wild Brook Trout.
                 </p>
                 <h3>Data analysis</h3>
                 <p>
@@ -171,19 +171,21 @@
                     Flotemersch et al. (2016) proposed and Thornbrugh et al. (2018). mapped an IWI for the U.S. based on six ecological
                     processes and functions:  hydrologic regulation, regulation of water chemistry, sediment regulation, hydrologic connectivity,
                     temperature regulation, and habitat provision.  A similar Connecticut specific IWI was developed as part of the
-                    recently adopted Connecticut Stream flow Regulations.  The index is a collective measure of the
+                    recently adopted <a href="graphics/FinalStreamflowClassifications.jpeg">Connecticut Stream flow Regulations.</a>
+                    The index is a collective measure of the
                     degree to which human-related alterations have affected these ecological processes and functions.
                     The index ranges from 0 to 1 where 0 is a an unaltered site and 1 is a highly stressed site.  The map above displays wild brook
-                    trout habitat as the watershed upstream of high densities of wild brook trout popultations.  High density wild brook trout
+                    trout habitat as the watershed upstream of high densities of wild brook trout populations.  High density wild brook trout
                     populations are defined as sites where observed samples contained greater than 73 wild brook trout per hectare.  Samples were
-                    collected by the CT DEEP Monitoring and Assessment Program and Inland Fisheries Program from 1989 - 2017.  Watersheds with higher
+                    collected by the CT DEEP Monitoring and Assessment Program and Inland Fisheries Program from 1989 - 2017.  Watershed catchment
+                    IWI stress level is displayed as a color gradient.  Watersheds with higher
                     levels of stress should be prioritize for restoration, while watersheds with low levels of stress should be prioritized for protection.
                 </p>
 
                 <h3>Tools used in this project</h3>
                 <ul>
-                    <li>PostGIS was used to store/query CT stream and fish datasets.</li>
-                    <li>Data is shown on Mapbox web map.</li>
+                    <li>PostGIS was used to store/query CT stream and fish datasets</li>
+                    <li>Data is shown on Mapbox web map</li>
                     <li>Custom-built R functions were used to calculate watershed statistics</li>
                 </ul>
 
