--- a/index.html
+++ b/index.html
@@ -204,6 +204,7 @@
             <div class="column">
                 <img class="max-image-width" src="graphics/brooktrout.jpg"
                     title="Brook Trout" border = "5">
+                <div class="linkbox">Brook Trout.  CT DEEP Photo Credit.</div>
 
                 <img class="max-image-width" src="graphics/drystream.JPG"
                      title="Dry Stream">
